# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
devtools/: Makefile_macos  Makefile_windows
records/: README.md
src/: main.cpp
src/core/: camera.cpp  camera.h  image.cpp  image.h  index.h  world.cpp  world.h  writer.cpp  writer.h
src/structures/: color.cpp  color.h  hit_record.cpp  hit_record.h  hittable.h  index.h  ray.cpp  ray.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h
src/structures/abstract/: hittable.h  index.h  material.cpp  material.h
src/structures/materials/: dielectric.cpp  dielectric.h  index.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
src/utils/: arithmetics.cpp  arithmetics.h  geometry.cpp  geometry.h  index.h  random.cpp  random.h
